@@ -18,8 +18,10 @@ class JUnitDevkitPatcherTest : BareTestFixtureTestCase() {
     assertThat(parametersList.list)
       .contains("--add-opens=java.base/java.io=ALL-UNNAMED",
                 "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                "--add-opens=java.base/java.lang.ref=ALL-UNNAMED",
                 "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
                 "--add-opens=java.base/java.net=ALL-UNNAMED",
+                "--add-opens=java.base/java.nio=ALL-UNNAMED",
                 "--add-opens=java.base/java.nio.charset=ALL-UNNAMED",
                 "--add-opens=java.base/java.text=ALL-UNNAMED",
                 "--add-opens=java.base/java.time=ALL-UNNAMED",
